--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@mui/x-data-grid": "^8.18.0",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "16.0.3",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
